fix: changed custom scrollbar to mixin for better usability in code

--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -9,3 +9,19 @@
     @warn "No value found for breakpoint: #{$breakpoint}";
     }
 }
+
+@mixin custom-scrollbar {
+    &::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: $neutral-grey-500;
+        border-radius: 20px;
+        border: 3px solid $neutral-white;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: $neutral-white;
+    }
+}
