--- a/scss/partials/ai-dropdown.scss
+++ b/scss/partials/ai-dropdown.scss
@@ -56,19 +56,8 @@
         margin-top: 4px;
         max-height: 200px;
         overflow-y: auto;
-
-        &::-webkit-scrollbar {
-            width: 12px;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background-color: $neutral-grey-500;
-            border-radius: 20px;
-            border: 3px solid $neutral-white;
-        }
-        &::-webkit-scrollbar-track {
-            background: $neutral-white;
-        }
+        
+        @include custom-scrollbar;
 
         &.show {
             display: block;
