--- a/scss/partials/ai-textarea.scss
+++ b/scss/partials/ai-textarea.scss
@@ -16,6 +16,8 @@
     border-radius: 4px;
     border: 1px solid $neutral-grey-100;
     background: $neutral-white;
+
+    @include custom-scrollbar;
 }
 
 .dark {
